src/test/deca/syntax/invalid/objet/ClassWithBadReturn.deca
class A{
    int x;
    int setX(int k){
        this.x;
    }
    int getX();
}

{
    A a = new A();
    int x;
    x = a.setX().getX();
    println("x= ",x);
}